# situation-puzzle

./: .env.example  .gitignore  Makefile  README.md  config.toml  pyproject.toml
backend/app/: config.py  dependencies.py  errors.py  health.py  logging_config.py  main.py  middleware.py  models.py  observability.py  storage.py
backend/app/graph/: __init__.py  nodes.py  state.py  workflow.py
backend/app/llm/: __init__.py  client.py  prompts.py
backend/app/routes/: __init__.py  games.py  history.py
backend/tests/: test_api_games.py  test_api_history.py  test_errors.py  test_game_service.py  test_graph.py  test_health.py  test_llm_client.py  test_logging.py  test_models.py  test_prompts.py  test_puzzle_generation_pipeline.py  test_storage.py
docs/: README.md  api-design.md  architecture.md  config.md  data-model.md  development-plan.md  logging-design.md  testing-strategy.md  workflow_log.md
docs/design/: README.md  api-design.md  architecture.md  config.md  data-model.md  frontend-design.md  game-flow.md  logging-design.md  prompt-contract.md  puzzle-generation-pipeline.md  puzzle-quality-contract.md  testing-strategy.md
docs/issue/: puzzle-generation-quality.md  trivial-puzzle-and-strict-solution-judgement.md
docs/plans/: development-plan.md  prompt-testing-plan.md
docs/prompt-tests/: README.md  answer-runs.jsonl  generation-runs.jsonl  judge-runs.jsonl  summary.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
tools/: pipeline_prompt_lab.py  prompt_lab.py  prompt_round4_lab.py
(+278 files in other folders)
